# 0var-lang

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: arithmetic.zvar  control_flow.zvar  fibonacci.0var  function_demo.zvar  precedence.zvar  simple_return.0var  tax_calculation.zvar
examples/0var/: basic_arithmetic.0var  complex_math.0var  constants.0var  function_calls.0var  performance.0var
examples/zvar/: basic_arithmetic.zvar
src/: cli.rs  error.rs  lib.rs  main.rs  span.rs  symbol_table.rs
src/codegen/: debug_info.rs  instruction.rs  mod.rs
src/lexer/: mod.rs  token.rs
src/parser/: ast.rs  mod.rs
src/types/: entity.rs  mod.rs
src/vm/: builtins.rs  mod.rs  stack.rs  value.rs
