[package]
name = "zvar-lang"
version = "0.1.0"
edition = "2021"
authors = ["Stavros Grigoriou <unix121@protonmail.com>"]
description = "A bytecode programming language that eliminates naming"
license = "MIT OR Apache-2.0"
repository = "https://github.com/stav121/zvar-lang"
readme = "README.md"
keywords = ["programming-language", "bytecode", "interpreter", "compiler"]
categories = ["development-tools"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
assert_matches = "1.5"

[[bin]]
name = "zvar"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1